--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.0",
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
-  },
-  "dependencies": {
-    "@emotion/core": "^10.0.7",
-    "gatsby": "^2.0.118",
-    "gatsby-cli": "^2.4.9",
-    "gatsby-plugin-emotion": "^4.0.3",
-    "gatsby-plugin-manifest": "^2.0.17",
-    "gatsby-plugin-offline": "^2.0.23",
-    "gatsby-plugin-react-helmet": "^3.0.6",
-    "gatsby-plugin-typography": "^2.2.7",
-    "gatsby-source-filesystem": "^2.0.20",
-    "gatsby-transformer-remark": "^2.2.4",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.18",
-    "typography": "^0.16.18",
-    "typography-theme-kirkham": "^0.16.18"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+    "name": "gatsby-starter-hello-world",
+    "private": true,
+    "description": "A simplified bare-bones starter for Gatsby",
+    "version": "0.1.0",
+    "license": "MIT",
+    "scripts": {
+        "build": "gatsby build",
+        "develop": "gatsby develop",
+        "start": "npm run develop",
+        "serve": "gatsby serve",
+        "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
+        "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    },
+    "dependencies": {
+        "@emotion/core": "^10.0.7",
+        "gatsby": "^2.0.118",
+        "gatsby-cli": "^2.4.9",
+        "gatsby-plugin-emotion": "^4.0.3",
+        "gatsby-plugin-manifest": "^2.0.17",
+        "gatsby-plugin-offline": "^2.0.23",
+        "gatsby-plugin-react-helmet": "^3.0.6",
+        "gatsby-plugin-typography": "^2.2.7",
+        "gatsby-source-filesystem": "^2.0.20",
+        "gatsby-transformer-remark": "^2.2.4",
+        "react": "^16.8.0",
+        "react-dom": "^16.8.0",
+        "react-helmet": "^5.2.0",
+        "react-typography": "^0.16.18",
+        "typography": "^0.16.18",
+        "typography-theme-kirkham": "^0.16.18"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    },
+    "bugs": {
+        "url": "https://github.com/gatsbyjs/gatsby/issues"
+    }
 }
