--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "dependencies": {
         "@emotion/core": "^10.0.7",
-        "gatsby": "^2.0.118",
+        "gatsby": "^2.1.4",
         "gatsby-cli": "^2.4.9",
         "gatsby-plugin-emotion": "^4.0.3",
         "gatsby-plugin-manifest": "^2.0.17",
@@ -36,5 +36,8 @@
     },
     "bugs": {
         "url": "https://github.com/gatsbyjs/gatsby/issues"
+    },
+    "devDependencies": {
+        "gh-pages": "^2.0.1"
     }
 }
